Fixing site alignments
Also, get rid of custom messages populating browserbee at startup

--- a/extension/studio.css
+++ b/extension/studio.css
@@ -7,7 +7,7 @@ html, body {
     margin-right: 1%;
     text-align: center;
     float: left;
-    width: 30%;
+    width: calc(max(30%, 300px));
 }
 
 textarea {
@@ -22,6 +22,10 @@ input {
     border: 2px rgb(197, 197, 197) solid;
     font-family: 'Gaegu', 'Segoe UI', sans-serif;
     font-size: 19px;
+}
+
+.slider {
+    width: calc(max(30%, 50px));
 }
 
 #main-bubble {
